Adjust view templates to make 'em fit

--- a/app/Resources/views/genus/list.html.twig
+++ b/app/Resources/views/genus/list.html.twig
@@ -10,7 +10,7 @@
             </tr>
         </thead>
         <tbody>
-            {% for genus in genuses %}
+            {% for genus in genera %}
                 <tr>
                     <td>
                         <a href="{{ path('genus_show', {'genusName': genus.name}) }}">
